# nhc-deprot-ranker

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  PHASE_STATUS.md  README.md  pyproject.toml
configs/: acquisition.yaml  baselines.yaml  data.yaml  dft_plan.yaml  evaluation.yaml  families.yaml  geometry_smoke.yaml  legacy.example.yaml  model.yaml  phase7.example.yaml  phase8a.example.yaml  phase8b.example.yaml
docs/: ACQUISITION.md  ACQUISITION_V001_MANIFEST.json  BASELINES_V001_MANIFEST.json  DATA_AUDIT.md  DATA_CONTRACT.md  DECISION_V001_MANIFEST.json  DFT_INPUT_PLAN_V001_MANIFEST.json  FAMILY_DEFINITION.md  GEOMETRY_SMOKE_V001_MANIFEST.json  HIERARCHICAL_V001_MANIFEST.json  IMPLEMENTATION_REPORT.md  LEGACY_AUDIT.md  LEGACY_SOURCE_MANIFEST.json  MODEL_CARD.md  MODEL_SPEC.md  PHASE0_EXECUTION_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_REPORT.md  PHASE1_TEST_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_REPORT.md  PHASE2_TEST_REPORT.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_REPORT.md  PHASE3_TEST_REPORT.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_REPORT.md  PHASE4_TEST_REPORT.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_REPORT.md  PHASE5_TEST_REPORT.md  PHASE6_IMPLEMENTATION_PLAN.md  PHASE6_REPORT.md  PHASE6_TEST_REPORT.md  PHASE7_IMPLEMENTATION_PLAN.md  PHASE7_REPORT.md  PHASE7_TEST_REPORT.md  PHASE8A_API_PREFLIGHT_V001.json  PHASE8A_IMPLEMENTATION_PLAN.md  PHASE8A_REPORT.md  (+15 more)
scripts/: deploy_phase8b_bundle.py  inspect_legacy.py  launch_phase8b_smoke.py  phase8a_api_preflight.py  phase8b_remote_postflight.py  phase8b_remote_preflight.py  (+5 more)
(+117 files in other folders)
