[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhc-deprot-ranker"
version = "0.1.0"
description = "Partially pooled calibration and ranking for NHC deprotonation electronic energies"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "nhc-deprot-ranker contributors" }]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pandas-stubs>=2.1",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.12",
  "types-PyYAML>=6.0",
]

[project.scripts]
nhc-deprot = "nhc_deprot_ranker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["nhc_deprot_ranker"]
mypy_path = "src"
warn_unused_configs = true
